# reflex-dev-portfolio

./: .gitignore  404.html  CNAME  bun.lockb  index.html  package.json  pyproject.toml  reflex.install_frontend_packages.cached  reflex.json  rxconfig.py  sitemap-0.xml
.github/workflows/: deploy.yml
404/: index.html
_next/static/4ayRzCMir44vdVEKGyQcy/: _buildManifest.js
_next/static/6VV78-kGlurNYsuA49DLZ/: _buildManifest.js
_next/static/GD5xhspIOZl8-j1BmWbLM/: _buildManifest.js
_next/static/JqMsC7ObqAeZ5s1XKvPg0/: _buildManifest.js
_next/static/KmnwasINWVa-4Y0qb1wjC/: _buildManifest.js
_next/static/OvysIwz4hPNrSPa0NBZjH/: _buildManifest.js
_next/static/chunks/: 110-c60767b187aa1d78.js  426-d13b96b2cbf7247a.js
_next/static/chunks/pages/: _app-0e4f178ed504059f.js  _app-43e82eb130be6c90.js  _app-4c6d5bac80bc4a0e.js  _app-96bc3a90d45b2c65.js  _app-b23dd946401df3d8.js  _app-b8b627b02d6af5c5.js  _app-c83c7bca9319b6ec.js  _app-cb0e87a7246a262d.js  (+10 more)
_next/static/css/: 507f3ba166ed8b31.css
_next/static/oYq6SUPiwiMgjPu5XyTY0/: _buildManifest.js
_next/static/p64tn11hnHSPZSvl_Hd9c/: _buildManifest.js
_next/static/rsQpJGTDpB0pMa5P66hBi/: _buildManifest.js
assets/: styles.css
dev_portfolio_reflex/: consts.py  dev_portfolio_reflex.py
dev_portfolio_reflex/components/: common.py
dev_portfolio_reflex/layouts/: navbar.py  section.py  sidebar.py
dev_portfolio_reflex/sections/: __init__.py  about.py  blog.py  career.py  projects.py
dev_portfolio_reflex/styles/: common.py
pages/: 404.js  _app.js  index.js
styles/: styles.css
utils/: context.js  theme.js
