[tool.poetry]
name = "dev-portfolio-reflex"
version = "0.1.0"
description = ""
authors = ["Z9 <earthlyz9.dev@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
reflex = "0.6.1"
pygithub = "^2.4.0"

[tool.poetry.group.dev.dependencies]
ruff = "^0.6.7"
black = { extras = ["d"], version = "^24.8.0" }

[tool.black]
line-length = 120

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

